src/objects/ensxapp__SAP_Sales_Doc_Search_Preset__mdt.object
<CustomObject>
    <description>Predefined search criteria for enosiX Sales Doc search</description>
    <fields>
        <fullName>ensxapp__Billing_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Completed_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The search will only documents in completed status</description>
        <label>Completed Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Created_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The search will only documents in created status</description>
        <label>Created Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Credit_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Delivery_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Open_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The search will only return documents in open status.</description>
        <label>Open Only</label>
        <type>Checkbox</type>
    </fields>
    <label>SAP Sales Doc Search Preset</label>
    <pluralLabel>SAP Sales Doc Search Presets</pluralLabel>
</CustomObject>